# AI-EQ-Assistant

./: .gitignore  README.md  analyze_voice.py  generate_pdf.py  pyproject.toml
analysis/: 1_analysis.json
prompts/: README.md  compression-settings.md  eq-recommendations.md  full-analysis.md  loudness-dynamics.md  pitch-analysis.md  speaking-rate-wpm.md  speech-linguistic.md  voice-quality-assessment.md
